# mbpoll

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README-WINDOWS.md  README.md  benchmark.sh  benchmark_output.txt  mbpoll-config.h
.github/workflows/: ci.yml  ci_build_linux.yml  ci_build_macos.yml  ci_build_windows.yml  ci_linux.yml  ci_macos.yml  ci_package_linux.yml  ci_package_macos.yml  ci_package_windows.yml  ci_setup_windows.yml  ci_windows.yml
desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
doc/: mbpoll.1
package/win/: .gitignore  mbpoll.iss
src/: chipio.c  chipio.h  custom-rts.c  custom-rts.h  mbpoll-runtime.c  mbpoll-runtime.h  mbpoll.c  mbpoll.h  serial.c  serial.h  utils.c  utils.h
tests/: CMakeLists.txt  test_serial.c  test_utils.c
tests/include/: modbus.h
